tests/snapshots/file@operator@add_string_nil.lox.snap
---
source: tests/common/mod.rs
description: "\"s\" + nil; // expect runtime error: Operands must be two numbers or two strings.\n"
input_file: test_files/operator/add_string_nil.lox
---
OUT: 

===
ERR: 
  × invalid operands, expected two numbers or string
   ╭────
 1 │ "s" + nil; // expect runtime error: Operands must be two numbers or two strings.
   ·     ┬
   ·     ╰── here
   ╰────
